<resources>
    <string name="app_name">Graphical Authenticator</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="name">Name</string>
    <string name="register_here">Register here</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="sign1Title">Create Your Signature</string>
    <string name="sign1Desc">Please draw your signature in the space\nprovided below.This signature will be \nused for authentication purposes.</string>
    <string name="sign2Title">Re-Draw Your Signature</string>
    <string name="sign2Desc">Please draw your signature in the space \nprovided below to confirm that it matches \nthe signature you created earlier.</string>
    <string name="loginTitle">Sign in with Your Signature</string>
    <string name="loginDesc">Draw your signature using your finger in the space provided below to authenticate your login.</string>
    <string name="continue1">Continue</string>
    <string name="next">Next</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>

</resources>