<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.EmailLoginActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="72dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="26dp" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_security_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/hGuideline"
            app:tint="@color/purple_500" />

        <TextView
            android:id="@+id/tvLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/ivUser" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tlEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="40dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tlPassword" />

        <LinearLayout
            android:id="@+id/llRegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/btnNext">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered_yet"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRegisterHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/register_here"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>